{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "43b9fc96-a026-466d-982f-533a6ab213e4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9a509a35-3572-4d99-a85f-63aeb425e6f0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Flashlight",
                    "type": "Value",
                    "id": "f9628630-a995-4420-9ac8-9bae4299e85f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FlashlightToggle",
                    "type": "Button",
                    "id": "20a0ec7c-37a4-4d7d-a11e-df791a54a468",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "e887ac1d-a694-41bf-af17-2d4fedc15c47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "0b3bd82f-219e-471d-b586-483e8377750c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Melee",
                    "type": "Button",
                    "id": "b9430bda-421b-49e0-a5ad-7c37093f7de3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamLeft",
                    "type": "Button",
                    "id": "5b8f2c2e-f91a-4fee-b2ae-ad4baf0feb6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamRight",
                    "type": "Button",
                    "id": "a2cc2dc9-b04a-4cca-952e-0c776ea7fcd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "853ad94a-cfdc-4803-ae08-47face848273",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "32d90d5e-9fff-4003-a18b-d79ed4724175",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8bb84e35-d4eb-494e-ab80-bb6ad1a45d72",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a8bcaa0d-3004-44a5-a641-10052037e07c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "33bf92fb-94a9-4dd2-981f-5cc4a1a2e1fb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "31165c31-0eb5-42f6-ba21-6d091920fa15",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flashlight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "019f4b57-2537-4b00-b145-d500ec000bfd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Flashlight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5903e619-6767-456c-bc66-855327ec683b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Flashlight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ffa21826-8bc8-4ee6-8011-661814d442cb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Flashlight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "da12761b-0edd-41eb-af22-192bbc6fc4be",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Flashlight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "39b05425-0cf3-4391-85b2-cd0670442115",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22c51fd5-47b8-4a1a-88aa-c1b288bc604a",
                    "path": "<Keyboard>/rightMeta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca100b5b-0020-480f-96fe-398b78cac65c",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Input",
                    "action": "Melee",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9fc54d1-1c8f-48b1-885b-143f2adb19e2",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlashlightToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83784ead-edff-4ba3-b830-3f34661871eb",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5054ae0f-9dde-4951-8e6c-6c58aef74443",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d5afa83c-75f0-4977-8417-05de11e2da13",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f9b38db5-9ee9-4a66-a585-b16c15e64818",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a0bed14-ba96-4a4b-8d9f-606e62dedd14",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Input",
            "bindingGroup": "Input",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}